fixing gcc build after [18213] refs #3
git-svn-id: http://svn.code.sf.net/p/sumo/code/trunk/sumo@18216 29f149b2-0c63-11e1-8f5c-a347f6a9acd0

--- a/configure.ac
+++ b/configure.ac
@@ -11,6 +11,7 @@ AM_INIT_AUTOMAKE([gnu dist-zip tar-ustar])
 
 AC_LANG([C++])
 
+CXXFLAGS="-std=c++0x $CXXFLAGS"
 dnl the debug check has to be made before the program checks
 dnl because it modifies CXXFLAGS
 if test x$CXX = xclang++; then
