--- a/src/microsim/trigger/Makefile.am
+++ b/src/microsim/trigger/Makefile.am
@@ -1,8 +1,6 @@
 noinst_LIBRARIES = libmicrosimtrigger.a
 
-libmicrosimtrigger_a_SOURCES = MSBusStop.cpp MSBusStop.h \
-MSCalibrator.cpp MSCalibrator.h \
-MSContainerStop.cpp MSContainerStop.h \
+libmicrosimtrigger_a_SOURCES = MSCalibrator.cpp MSCalibrator.h \
 MSContainerTerminal.cpp MSContainerTerminal.h \
 MSLaneSpeedTrigger.cpp MSLaneSpeedTrigger.h \
 MSTrigger.h MSTrigger.cpp \
