--- a/sumo/src/microsim/Makefile.am
+++ b/sumo/src/microsim/Makefile.am
@@ -28,7 +28,7 @@ MSVehicleControl.cpp MSVehicleControl.h \
 MSVehicleTransfer.cpp MSVehicleTransfer.h \
 MSVehicleType.cpp MSVehicleType.h \
 MSStateHandler.h MSStateHandler.cpp \
-MSTransportable.h
+MSTransportable.h MSTransportable.cpp
 
 SUBDIRS = actions cfmodels devices lcmodels logging output pedestrians \
 traffic_lights trigger
