refactoring containers and persons into transportables, part 2, refs #12
git-svn-id: http://svn.code.sf.net/p/sumo/code/trunk/sumo@18274 29f149b2-0c63-11e1-8f5c-a347f6a9acd0

--- a/src/microsim/Makefile.am
+++ b/src/microsim/Makefile.am
@@ -28,7 +28,7 @@ MSVehicleControl.cpp MSVehicleControl.h \
 MSVehicleTransfer.cpp MSVehicleTransfer.h \
 MSVehicleType.cpp MSVehicleType.h \
 MSStateHandler.h MSStateHandler.cpp \
-MSTransportable.h
+MSTransportable.h MSTransportable.cpp
 
 SUBDIRS = actions cfmodels devices lcmodels logging output pedestrians \
 traffic_lights trigger
