removing bulkstar, refs #12
git-svn-id: http://svn.code.sf.net/p/sumo/code/trunk/sumo@18397 29f149b2-0c63-11e1-8f5c-a347f6a9acd0

--- a/src/router/Makefile.am
+++ b/src/router/Makefile.am
@@ -5,7 +5,7 @@ ROEdge.cpp ROEdge.h \
 ROFrame.cpp ROFrame.h ROHelper.cpp ROHelper.h ROLane.h \
 ROLoader.cpp ROLoader.h \
 RONet.cpp RONet.h RONetHandler.cpp RONetHandler.h \
-RONode.cpp RONode.h RORouteAggregator.h \
+RONode.cpp RONode.h \
 RORoute.cpp RORoute.h RORouteDef.cpp RORouteDef.h \
 RORouteHandler.cpp RORouteHandler.h \
 ROVehicle.cpp ROVehicle.h \
