--- a/sumo/src/router/Makefile.am
+++ b/sumo/src/router/Makefile.am
@@ -5,7 +5,7 @@ ROEdge.cpp ROEdge.h \
 ROFrame.cpp ROFrame.h ROHelper.cpp ROHelper.h ROLane.h \
 ROLoader.cpp ROLoader.h \
 RONet.cpp RONet.h RONetHandler.cpp RONetHandler.h \
-RONode.cpp RONode.h RORouteAggregator.h \
+RONode.cpp RONode.h \
 RORoute.cpp RORoute.h RORouteDef.cpp RORouteDef.h \
 RORouteHandler.cpp RORouteHandler.h \
 ROVehicle.cpp ROVehicle.h \
