introducing very stripped down route parser to marouter, refs #865
git-svn-id: http://svn.code.sf.net/p/sumo/code/trunk/sumo@18528 29f149b2-0c63-11e1-8f5c-a347f6a9acd0

--- a/src/marouter/Makefile.am
+++ b/src/marouter/Makefile.am
@@ -8,7 +8,8 @@ marouter_SOURCES = marouter_main.cpp \
 ROMAAssignments.cpp ROMAAssignments.h \
 ROMAEdge.cpp ROMAEdge.h \
 ROMAEdgeBuilder.cpp ROMAEdgeBuilder.h \
-ROMAFrame.cpp ROMAFrame.h
+ROMAFrame.cpp ROMAFrame.h \
+ROMARouteHandler.cpp ROMARouteHandler.h
 
 marouter_LDFLAGS = $(XERCES_LDFLAGS)
 
