making really clean, refs #3
git-svn-id: http://svn.code.sf.net/p/sumo/code/trunk/sumo@18533 29f149b2-0c63-11e1-8f5c-a347f6a9acd0

--- a/Makefile.cvs
+++ b/Makefile.cvs
@@ -4,6 +4,5 @@ all:
 	autoreconf -i
 
 clean:
-	rm -r aclocal.m4 autom4te.cache/ config.* configure depcomp install-sh missing src/config.h.in ltmain.sh INSTALL src/version.h ; \
+	rm -r aclocal.m4 autom4te.cache/ config.* configure depcomp install-sh missing src/config.h.in ltmain.sh INSTALL src/version.h src/netimport/typemap.h; \
 	find . -name Makefile.in -exec rm '{}' ';'
- 
