fixing linux typemap build, refs #3
git-svn-id: http://svn.code.sf.net/p/sumo/code/trunk/sumo@18536 29f149b2-0c63-11e1-8f5c-a347f6a9acd0

--- a/src/netimport/Makefile.am
+++ b/src/netimport/Makefile.am
@@ -21,7 +21,7 @@ NINavTeqHelper.cpp NINavTeqHelper.h
 
 SUBDIRS = vissim
 
+BUILT_SOURCES = typemap.h
+EXTRA_DIST = typemap.h
 typemap.h:
 	../../tools/build/typemap.py
-
-EXTRA_DIST = typemap.h
