{colombo} fixing linux build
git-svn-id: http://svn.code.sf.net/p/sumo/code/branches/colombo@18555 29f149b2-0c63-11e1-8f5c-a347f6a9acd0

--- a/src/microsim/traffic_lights/Makefile.am
+++ b/src/microsim/traffic_lights/Makefile.am
@@ -1,10 +1,10 @@
 noinst_LIBRARIES = libmicrosimtls.a
 
 libmicrosimtls_a_SOURCES = \
-MSActuatedTrafficLightLogic.cpp
-MSActuatedTrafficLightLogic.h \
-MSPhaseDefinition.h \MSAgentbasedTrafficLightLogic.cpp MSAgentbasedTrafficLightLogic.h \
-MSPhaseDefinition.h \MSOffTrafficLightLogic.cpp MSOffTrafficLightLogic.h \
+MSActuatedTrafficLightLogic.cpp MSActuatedTrafficLightLogic.h \
+MSAgentbasedTrafficLightLogic.cpp MSAgentbasedTrafficLightLogic.h \
+MSOffTrafficLightLogic.cpp MSOffTrafficLightLogic.h \
+MSRailSignal.cpp MSRailSignal.h \
 MSPhaseDefinition.cpp MSPhaseDefinition.h \
 MSPhasedTrafficLightLogic.cpp MSPhasedTrafficLightLogic.h \
 MSSimpleTrafficLightLogic.cpp MSSimpleTrafficLightLogic.h \
