UNIBO Merged sumo come with the current version of the swarm traffic light. Also merged PushButton
git-svn-id: http://svn.code.sf.net/p/sumo/code/branches/colombo@18569 29f149b2-0c63-11e1-8f5c-a347f6a9acd0

--- a/src/microsim/traffic_lights/Makefile.am
+++ b/src/microsim/traffic_lights/Makefile.am
@@ -31,4 +31,5 @@ MSSOTLHiLevelTrafficLightLogic.cpp MSSOTLHiLevelTrafficLightLogic.h \
 MSSwarmTrafficLightLogic.cpp MSSwarmTrafficLightLogic.h \
 MSDeterministicHiLevelTrafficLightLogic.cpp MSDeterministicHiLevelTrafficLightLogic.h \
 MSTLLogicControl.cpp MSTLLogicControl.h \
-MSTrafficLightLogic.cpp MSTrafficLightLogic.h
+MSTrafficLightLogic.cpp MSTrafficLightLogic.h \
+MSPushButton.cpp MSPushButton.h
