* added C++ VISSIM conflict area importer
git-svn-id: http://svn.code.sf.net/p/sumo/code/trunk@18640 29f149b2-0c63-11e1-8f5c-a347f6a9acd0

--- a/sumo/src/netimport/vissim/tempstructs/Makefile.am
+++ b/sumo/src/netimport/vissim/tempstructs/Makefile.am
@@ -4,6 +4,7 @@ libvissimtmpstr_a_SOURCES = NIVissimAbstractEdge.cpp NIVissimAbstractEdge.h \
 NIVissimBoundedClusterObject.cpp NIVissimBoundedClusterObject.h \
 NIVissimClosedLaneDef.cpp NIVissimClosedLaneDef.h \
 NIVissimClosedLanesVector.h NIVissimClosures.cpp NIVissimClosures.h \
+NIVissimConflictArea.cpp NIVissimConflictArea.h \
 NIVissimConnection.cpp NIVissimConnection.h \
 NIVissimConnectionCluster.cpp NIVissimConnectionCluster.h \
 NIVissimDistrictConnection.cpp NIVissimDistrictConnection.h \
