moving extractTest, fix #1821
git-svn-id: http://svn.code.sf.net/p/sumo/code/trunk@18683 29f149b2-0c63-11e1-8f5c-a347f6a9acd0

--- a/sumo/Makefile.am
+++ b/sumo/Makefile.am
@@ -88,7 +88,7 @@ dist-complete: dist dist-doc dist-tests traas traci4j trafficmodeler
 	$(am__remove_distdir)
 
 examples:
-	tests/extractTest.py -x -f tests/examples.txt
+	tools/extractTest.py -x -f tests/examples.txt
 
 traas:
 	ant -f tools/contributed/traas/build.xml clean release
