including version.h if needed, refs #1836
git-svn-id: http://svn.code.sf.net/p/sumo/code/trunk@18690 29f149b2-0c63-11e1-8f5c-a347f6a9acd0

--- a/sumo/src/Makefile.am
+++ b/sumo/src/Makefile.am
@@ -111,12 +111,13 @@ netbuild netwrite netgen netimport netload \
 polyconvert dfrouter duarouter jtrrouter activitygen tools \
 $(TRACI_DIRS) $(GUI_DIRS)
 
-EXTRA_DIST = config.h config.h.in \
-guisim.rc \
-windows_config.h
-
 if WITH_VERSION_H
-all: version.h
-version.h: ../.svn
+VERSION_H = version.h
+all: $(VERSION_H)
+$(VERSION_H): ../.svn
 	../tools/build/version.py $(CURDIR)
 endif
+
+EXTRA_DIST = config.h config.h.in \
+$(VERSION_H) guisim.rc \
+windows_config.h
