--- a/sumo/Makefile.am
+++ b/sumo/Makefile.am
@@ -47,8 +47,8 @@ dist-hook:
 	    tests/extractTest.py -i -f tests/examples.txt -o $(abs_distdir)/docs ; \
 	    find build -regex ".*\.\(vcxproj\|vcxproj\.filters\|props\|sln\|spec\)" -print0 | xargs -0 cp --parents --target-directory $(abs_distdir) ; \
 	    find data -regex ".*\.\(xsd\|xml\|csv\|veh\)" -print0 | xargs -0 cp --parents --target-directory $(abs_distdir) ; \
-	    ( svn export --force tools $(distdir)/tools && cd $(distdir) && find tools -type f > ../tools_filelist; true ) ; \
-	    xargs cp --parents --target-directory $(abs_distdir) < tools_filelist ; \
+	    ( svn export --force tools $(distdir)/tools && cd $(distdir) && find tools -type f -print0 > ../tools_filelist; true ) ; \
+	    xargs -0 cp --parents --target-directory $(abs_distdir) < tools_filelist ; \
 	    find $(abs_distdir)/tools -name  "*.jar" | xargs rm ; \
 	    cp tools_filelist $(abs_distdir) ; \
 	fi;
