not only copying version.h but using it, fix #1836
git-svn-id: http://svn.code.sf.net/p/sumo/code/trunk@18713 29f149b2-0c63-11e1-8f5c-a347f6a9acd0

--- a/sumo/configure.ac
+++ b/sumo/configure.ac
@@ -126,8 +126,8 @@ else
     ac_disabled="$ac_disabled TRACI"
 fi
 
-AM_CONDITIONAL([WITH_VERSION_H], test -d .svn)
-if test -d .svn; then
+AM_CONDITIONAL([WITH_VERSION_H], test -d .svn || test x$PACKAGE_VERSION == xsvn -a -f src/version.h)
+if test -d .svn || test x$PACKAGE_VERSION == xsvn -a -f src/version.h; then
    AC_DEFINE([HAVE_VERSION_H], [1], [Define if auto-generated version.h should be used.])
 else
    AC_DEFINE_UNQUOTED(VERSION_STRING, "$PACKAGE_VERSION", [Defined if auto-generated version.h is unavailable.])
