--- a/sumo/configure.ac
+++ b/sumo/configure.ac
@@ -108,13 +108,13 @@ AM_CONDITIONAL(INTERNAL, test -d $srcdir/src/mesosim)
 m4_syscmd([test -d src/mesosim])
 m4_if(m4_sysval,[0],[
     AC_DEFINE([HAVE_INTERNAL], [1], [Define to enable internal code.])
-    AC_CONFIG_FILES([src/mesogui/Makefile src/mesosim/Makefile src/netedit/Makefile src/osgview/Makefile])
+    AC_CONFIG_FILES([src/mesogui/Makefile src/mesosim/Makefile src/osgview/Makefile])
     INTERNAL_DIRS="mesosim"
     AC_SUBST([INTERNAL_DIRS])
-    GUI_INTERNAL_DIRS="mesogui netedit osgview"
+    GUI_INTERNAL_DIRS="mesogui osgview"
     AC_SUBST([GUI_INTERNAL_DIRS])
     ac_enabled="$ac_enabled Internal"
-    program_transform_name="s,\$\$,Int,; s,sumoInt,meso,; s,sumo-guiInt,meso-gui,; s,neteditInt,netedit,; $program_transform_name"
+    program_transform_name="s,\$\$,Int,; s,sumoInt,meso,; s,sumo-guiInt,meso-gui,; $program_transform_name"
 ])
 
 AC_ARG_ENABLE([traci],[AS_HELP_STRING([--disable-traci],[disable Traffic Control Interface (TraCI) Server [default=no].])])
@@ -462,6 +462,7 @@ src/microsim/traffic_lights/Makefile
 src/microsim/trigger/Makefile
 src/marouter/Makefile
 src/netbuild/Makefile
+src/netedit/Makefile
 src/netgen/Makefile
 src/netimport/Makefile
 src/netimport/vissim/Makefile
