started work refs #1253
git-svn-id: http://svn.code.sf.net/p/sumo/code/trunk@18880 29f149b2-0c63-11e1-8f5c-a347f6a9acd0

--- a/sumo/src/netedit/Makefile.am
+++ b/sumo/src/netedit/Makefile.am
@@ -24,6 +24,7 @@ GNENet.h GNENet.cpp \
 GNEEdge.h GNEEdge.cpp \
 GNELane.h GNELane.cpp \
 GNEInternalLane.h GNEInternalLane.cpp \
+GNECrossing.h GNECrossing.cpp \
 GNEJunction.h GNEJunction.cpp \
 GNEPOI.h GNEPOI.cpp \
 GNEPoly.h GNEPoly.cpp \
