refactoring gui vehicle code. refs #12, refs #1932
git-svn-id: http://svn.code.sf.net/p/sumo/code/trunk@18920 29f149b2-0c63-11e1-8f5c-a347f6a9acd0

--- a/sumo/src/guisim/Makefile.am
+++ b/sumo/src/guisim/Makefile.am
@@ -18,6 +18,7 @@ GUITrafficLightLogicWrapper.cpp GUITrafficLightLogicWrapper.h \
 GUITriggeredRerouter.cpp GUITriggeredRerouter.h \
 GUICalibrator.cpp GUICalibrator.h \
 GUIChrgStn.cpp GUIChrgStn.h \
+GUIBaseVehicle.cpp GUIBaseVehicle.h \
 GUIVehicle.cpp GUIVehicle.h GUIVehicleControl.cpp GUIVehicleControl.h \
 GUI_E2_ZS_Collector.cpp GUI_E2_ZS_Collector.h \
 GUI_E2_ZS_CollectorOverLanes.cpp GUI_E2_ZS_CollectorOverLanes.h
